src/App.css
body {
    background-color: snow;
    padding-left: 10%;
    width: 80%;


}

article {
    background-color: snow;
    width: 85%;
    padding-left: 15%;
}


section > div {
    width: 65%;
}


blockquote p {
    width: 100%;
    font-size: 80%;
}


article > section:first-of-type > div > p:first-of-type::first-letter {
    font-size: 400%;
    font-family: kaiserzeitgotischregular, serif;
}

section > div > p:first-of-type {
    margin-top: 8%;
}

hr {
    height: 0;
    margin: 0;
}

